# js-bridge

./: js-base.cabal  js-bridge.cabal  stack.yaml
Test/: Client.hs  prelude.webidl
src/: Client.hs  Server.hs
src/Control/JS/Utils/: Client.hs  Encoding.hs  Server.hs  ServerRPC.hs
src/JS/: Platform.hs  Type.hs
src/Language/JS/: Platform.hs  Type.hs
