name:                js-base
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Zhen Zhang
maintainer:          izgzhen@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Language.JS.Platform
                       Language.JS.Type
  default-extensions:  LambdaCase
  other-extensions:    DeriveGeneric
  build-depends:       base >=4.9 && <4.10, bytestring >=0.10 && <0.11, aeson,
                       wl-pprint, MissingH
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
